// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX hKzJDY"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX gKHvPP"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX jpLBJP"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX bsafAZ"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb khTHXI"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX iKalup"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb buRaAO"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje dnuoWJ"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX gXTwGM"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb cJaWEV"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-ifAKCX zehty"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa byUSSw sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-bxivhb gOLzm"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa byUSSw sc-bZQynM flUvJk"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX hXqIxN"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX gAHUpU"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX bTZaoB"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX hZbZiH"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX gvbYnD"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX hZQaLs"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX boBUjb"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX FjDje"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX eAxhgD"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX bqpKXX"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX kGBcNg"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX dPWPMV"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX hXqIxN"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX gAHUpU"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX bTZaoB"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX hZbZiH"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX gvbYnD"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX hZQaLs"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-ifAKCX boBUjb"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-ifAKCX FjDje"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-ifAKCX eAxhgD"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-ifAKCX bqpKXX"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX kGBcNg"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-ifAKCX dPWPMV"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-EHOje cmLHsF"
  />
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-ifAKCX gvbYnD"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-ifAKCX gvbYnD"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf sc-bZQynM flUvJk"
  >
    News
  </p>
</button>
`;
